--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/labordayproject/main#readme",
   "dependencies": {
+    "ejs": "2.3.3",
     "express": "^4.13.3"
   },
   "engines": {
