--- a/package.json
+++ b/package.json
@@ -26,7 +26,11 @@
   "dependencies": {
     "ejs": "2.3.3",
     "express": "^4.13.3",
-    "jquery": "^1.11.1"
+    "jquery": "^1.11.1",
+    "jsdom": {
+         "version": "1.0.1",
+         "from": "jsdom@0.5.7"
+       }
   },
   "engines": {
     "node": "0.10.x"
