--- a/package.json
+++ b/package.json
@@ -27,10 +27,7 @@
     "ejs": "2.3.3",
     "express": "^4.13.3",
     "jquery": "^1.11.1",
-    "jsdom": {
-         "version": "1.0.1",
-         "from": "jsdom@0.5.7"
-       }
+    "jsdom": "1.0.1"
   },
   "engines": {
     "node": "0.10.x"
