--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "express": "^4.13.3",
     "jade": "^1.11.0",
     "passwordless": "^1.1.0",
-    "passwordless-mongostore": "^0.1.3"
+    "passwordless-mongostore": "^0.1.3",
+    "body-parser": "^1.13.3",
+    "mongojs": "^1.3.0"
   }
 }
