--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "type": "git",
     "url": "https://github.com/labordayproject/main.git"
   },
-
   "keywords": [
     "test",
     "heroku",
@@ -24,19 +23,17 @@
   },
   "homepage": "https://github.com/labordayproject/main#readme",
   "dependencies": {
-
+    "ejs": "2.3.3",
     "emailjs": "^0.3.16",
     "express": "^4.13.3",
     "jade": "^1.11.0",
-    "passwordless": "^1.1.0",
-    "passwordless-mongostore": "^0.1.3",
-    "ejs": "2.3.3",
-    "express": "^4.13.3",
     "jquery": "^1.11.1",
-    "jsdom": "1.0.1"
+    "jsdom": "1.0.1",
+    "mongodb": "^2.0.42",
+    "passwordless": "^1.1.0",
+    "passwordless-mongostore": "^0.1.3"
   },
   "engines": {
     "node": "0.10.x"
-
   }
 }
