--- a/package.json
+++ b/package.json
@@ -23,13 +23,15 @@
   },
   "homepage": "https://github.com/labordayproject/main#readme",
   "dependencies": {
-    "ejs": "2.3.3",
+    "body-parser": "^1.13.3",
+    "ejs": "^2.3.3",
     "emailjs": "^0.3.16",
     "express": "^4.13.3",
     "jade": "^1.11.0",
     "jquery": "^1.11.1",
-    "jsdom": "1.0.1",
+    "jsdom": "^1.0.1",
     "mongodb": "^2.0.42",
+    "mongojs": "^1.3.0",
     "passwordless": "^1.1.0",
     "passwordless-mongostore": "^0.1.3"
   },
